--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
   <noscript>In order to view this documentation page, you have to enable JavaScript in your web browser.</noscript>
-  <div id="app" data-root="/crud-usuario-doc"></div>
+  <div id="app" data-root="/crud-usuario-doc/"></div>
 </body>
 </html>
